--- a/css/estilos.css
+++ b/css/estilos.css
@@ -142,7 +142,7 @@ body {
   background-image: url(/img/topbar/video_call.png);
   background-repeat: no-repeat;
   background-position: center;
-  padding: 20px;
+  padding: 13px 13px 30px 40px;
   background-size: 24px;  
 }
 
@@ -150,7 +150,7 @@ body {
   background-image: url(/img/topbar/apps.png);
   background-repeat: no-repeat;
   background-position: center;
-  padding: 1vw 1vw 1vw 1vw;
+  padding: 13px 13px 30px 40px;
   background-size: 24px;  
 }
 
@@ -158,7 +158,7 @@ body {
   background-image: url(../img/topbar/notifications.png);
   background-repeat: no-repeat;
   background-position: center;
-  padding: 1vw 1vw 1vw 1vw;
+  padding: 13px 13px 30px 40px;
   background-size: 21px;
 }
 
@@ -166,7 +166,7 @@ body {
   background-image: url(../img/topbar/Avatar.png);
   background-repeat: no-repeat;
   background-position: center;
-  padding: 1vw 1vw 1vw 1vw;
+  padding: 13px 13px 30px 40px;
   background-size: 24px;
 }
 
@@ -451,12 +451,20 @@ iframe {
   body {
     height: 100vh;
   }
+  
+  .cabecalho__videos {
+    background-image: url(/img/topbar/video_call.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 13px 13px 30px 30px;
+    background-size: 18px;
+  }
 
   .cabecalho__apps {
     background-image: url(/img/topbar/apps.png);
     background-repeat: no-repeat;
     background-position: center;
-    padding: 5vw 5vw 5vw 5vw;
+    padding: 13px 13px 30px 30px;
     background-size: 18px;  
   }
 
@@ -464,7 +472,7 @@ iframe {
     background-image: url(../img/topbar/notifications.png);
     background-repeat: no-repeat;
     background-position: center;
-    padding: 5vw 5vw 5vw 5vw;
+    padding: 13px 13px 30px 30px;
     background-size: 18px;
   }
 
@@ -472,14 +480,15 @@ iframe {
     background-image: url(../img/topbar/Avatar.png);
     background-repeat: no-repeat;
     background-position: center;
-    padding: 5vw 5vw 5vw 5vw;
+    padding: 13px 13px 30px 30px;
     background-size: 24px;
   }
+
 
   .cabecalho__switch {
     position: relative;
     display: inline-block;
-    padding: 5vw 5vw 5vw 5vw;
+    padding: 13px 13px 30px 30px;
     width: 60px;
     height: 34px;
     display: none;
@@ -629,7 +638,7 @@ iframe {
   }
 }
 
-@media (min-width: 1440px) {
+@media (min-width: 1400px) {
   .superior__secao__container {
     left: 15.4375rem;
   }
