--- a/css/estilos.css
+++ b/css/estilos.css
@@ -97,8 +97,7 @@ body {
 }
 
 .pesquisar__input {
-  padding: 9px;
-  border: 1px solid var(--cinza-claro);
+  padding: 12px;
   border-radius: 32px 0px 0px 32px;
   font-size: 16px;
 }
@@ -110,7 +109,7 @@ body {
 }
 
 .pesquisar__btn {
-  background-color: var(--cinza-claro);
+  background-color: #ebebeb ;
   border: 0px;
   border-radius: 0px 32px 32px 0px;
   padding: 8px;
@@ -129,6 +128,10 @@ body {
   justify-content: center;
   padding: 0;
   margin-left: 8px; /* opcional, para espaçamento */
+}
+
+.cabecalho__audio:hover {
+  cursor: pointer;
 }
 
 .cabecalho__audio img {
