--- a/css/estilos.css
+++ b/css/estilos.css
@@ -616,7 +616,7 @@ iframe {
     padding: 0.25rem 0.5rem;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     gap: 0.25rem;
     cursor: pointer;
